// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiScreenReaderOnly adds an accessibility class to a child element and combines other classNames (foo, bar) given as props on the child 1`] = `
<p
  class="foo bar emotion-euiScreenReaderOnly"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`EuiScreenReaderOnly adds an accessibility class to a child element when used with no props 1`] = `
<p
  class="emotion-euiScreenReaderOnly"
>
  This paragraph is not visibile to sighted users but will be read by screenreaders.
</p>
`;

exports[`EuiScreenReaderOnly will show on focus 1`] = `
<a
  class="emotion-euiScreenReaderOnly"
  href="#"
>
  Link
</a>
`;
